--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-video": "^5.1.1",
-    "react-native-web": "./react-native-web/packages/react-native-web"
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
