--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "react": "16.13.1",
+    "react": "17.0.2",
     "react-dom": "16.13.1",
-    "react-native": "^0.63.4",
+    "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
